# automation

./: .dockerignore  .env.local.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  package.json  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.pr/: live_test_termination.py  termination_evidence.json
automation/: __init__.py  app.py  auth.py  config.py  constants.py  db.py  dispatcher.py  encryption.py  event_router.py  execution.py  executor.py  kv_helpers.py  kv_metrics.py  kv_router.py  kv_schemas.py  logger.py  models.py  preset_router.py  prompt_router.py  router.py  scheduler.py  schemas.py  tarball_validation.py  trigger_matcher.py  uploads.py  watchdog.py  webhook_router.py
chart/: Chart.yaml  values.yaml
containers/: Dockerfile  Dockerfile.combined  Dockerfile.local  entrypoint.combined.sh  entrypoint.sh  nginx.conf  supervisord.combined.conf  supervisord.conf
docs/: kv-store-client-guide.md  kv-store-design.md  kv-store-test-plan.md  npm-development.md  self-hosted.md
frontend/: README.md  package-lock.json  package.json  react-router.config.ts  tailwind.config.js  vite.config.ts  vitest.setup.ts
integration/: README.md  conftest.py  test_automation_api.py
migrations/: env.py
openhands/: __init__.py
openhands_automation/: __init__.py
scripts/: check_version_consistency.py  npm-dev-stack.mjs  test_automation.py  test_kv_e2e.py  test_sandbox.py
tests/: conftest.py  test_ab_testing_integration.py  test_app_migrations.py  test_async_utils.py  test_auth.py  test_backends.py  test_callbacks.py  test_cancel_run.py  test_cipher_and_encryption.py  test_config.py  test_cors.py  test_db.py  test_disable_automation.py  test_dispatcher.py  test_event_router.py  test_event_schemas.py  test_execution.py  test_frontend.py  test_health.py  test_kv_batch.py  test_kv_concurrency.py  test_kv_helpers.py  test_kv_router.py  test_local_mode.py  test_openapi.py  test_preset_router.py  test_preset_termination.py  test_prompt_router.py  test_router.py  test_sandbox_metadata.py  test_scheduler.py  (+19 more)
(+266 files in other folders)
